--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -272,7 +272,7 @@
 
             <section class="lg:p-4 p-2 justify-content-center align-items-center text-center">
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://telegram.me/KingVj01" target="_blank" role="button">
+                    href="https://telegram.me/tactition" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="admin-gradient" x1="32" x2="32" y1="10" y2="54.751"
@@ -295,7 +295,7 @@
 
                 <!-- Telegram -->
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://telegram.me/KingVj01" target="_blank" role="button">
+                    href="https://t.me/Self_Improvement_Audiobooks" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="telegram-gradient" x1="32" x2="32" y1="10" y2="54.751"
