--- a/TechVJ/template/dl.html
+++ b/TechVJ/template/dl.html
@@ -9,7 +9,9 @@
     <meta property="og:image" content="https://i.ibb.co/qJyZWCv/20230629-081948-0000.png" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>%s | Self Improvment AudioBooks</title>
+    <meta name="Description" content="This is Temporary Site to Provide Content Like Softwares and other stuff releated tech By Extracting Files from Server and Serving 
+        the user Made By Tactition">
+    <title>Self Improvment AudioBooks</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
